Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21207

ListView header disappears when setting initial geometry of listview to (0,0) and then increasing the geometry

    XMLWordPrintable

Details

    • 8282beb53de059237a4240ad9615d77f676c20fb

    Description

      When setting a ListView with a empty (or small) size initially the contentY of the ListView gets overwritten with 0 and afterwards if we increase the geometry of ListView, the header doesn't appear (contentY is not restored).

      attached is a test case for this bug, when you click on the Item, the red header should appear (the header appears if model < 9, in this case ListView.contentHeight < View.height).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            lscunha Leonardo Sobral Cunha (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes