Fix min extents to correctly consider header size

Regression from c0fc795f which changed implementation to always position
header at a negative position, and not just when visibleItems is empty.

Task-number: QTBUG-21207

Change-Id: I9a888e7e30b00f70835734b1e0e75e57ed282602
Reviewed-on: http://codereview.qt.nokia.com/4159
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>